tests/lean/248.lean.expected.out
248.lean:1:28-1:31: error: invalid 'implementedBy' argument 'foo', function cannot be implemented by itself
